--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.13",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.13.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-dropdown-select-list": "^1.0.23",
+    "react-native-element-dropdown": "^2.3.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
