--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.13.0",
+    "link": "^1.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react-native": "^0.68.2",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-dropdown-select-list": "^1.0.23",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-numeric-input": "^1.9.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
