--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.13.0",
+    "formik": "^2.2.9",
     "link": "^1.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -35,7 +36,10 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.32.11",
+    "expo-image-picker": "~13.1.1",
+    "expo-constants": "~13.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
